force-app/main/default/objects/Attendee__c/fields/Address_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address of Event</label>
    <referenceTo>Location_Address_Book__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>