force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Of Attendees</description>
    <inlineHelpText>Enter Attendee of Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>