force-app/main/default/objects/Attendee__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <description>Attendees Phone Number</description>
    <inlineHelpText>Enter your Phone Number</inlineHelpText>
    <label>Phone No.</label>
    <type>Phone</type>
</CustomField>